--- a/demo_urn.html
+++ b/demo_urn.html
@@ -56,7 +56,7 @@
 <body>
     <div class="product-card">
         <video class="product-video" autoplay loop muted>
-            <source src="./Recording 2024-12-24 010807.mp4" type="video/mp4">
+            <source src="https://github.com/MSPK99/video-demo/blob/a49e0f5d9f63bf5426220cfee47b4bc18c6788cf/for%20my%20doc%20file.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="product-title">
